# GADO

./: README.md
GUI/: GUI.md  clickablelabel.py  home.qrc  home_rc.py  landmarks.csv  landmarks_medical.csv  medical_face_detection.ui  medical_home.py  medical_identification_complete.py  medical_identification_complete.ui  medical_main.py  patient_identification.py  patient_landmark_complete.py  patient_landmark_complete.ui  patient_map.ui  patient_map_injection.py  patient_record.ui
GUI/Medical/: medical_complete.py  medical_deliver.py  medical_face_detection.py  medical_identification_complete_destination.py
GUI/Navigation/vizlib_test/: CMakeLists.txt  package.xml
GUI/Navigation/vizlib_test/src/: vizlib_test.cpp  vizlib_test.h  vizlib_test.ui
GUI/Navigation/vizlib_test/src/fixed destination/: main.cpp  vizlib_test.cpp  vizlib_test.ui
GUI/Patient/: patient_home.py  patient_identification_complete.py  patient_main_2.py  patient_map_imaging.py  patient_map_pharmacy.py  patient_record.py  patient_webcam.py
GUI/UI/: main_window.ui  medical_deliver.ui  medical_home.ui  patient_face_detection.ui  patient_home.ui  patient_identification_complete.ui
